<?xml version="1.0" encoding="utf-8"?>
<!-- App Strings. Generated by AI. -->
<resources>
    <string name="app_name">Delook</string>
    <string name="search_hint">Cari aplikasi…</string>
    <string name="show_system_apps">Tampilkan aplikasi sistem</string>
    <string name="btn_open">Buka</string>
    <string name="btn_info">Info</string>
    <string name="show_system_apps_desc">Tampilkan aplikasi bawaan sistem</string>
    <string name="no_apps_found">Tidak ada aplikasi</string>
    <string name="apps_loaded">%1$d aplikasi</string>
    <string name="shared_link_label">Link: %1$s</string>
    <string name="cannot_open_app">Gagal membuka aplikasi</string>
    <string name="system_app_badge">Sistem</string>
    <string name="pinned_app_badge">Sematkan</string>
    <string name="btn_unpin">Batal</string>
</resources>
